exports[`test component renders as expected 1`] = `
<div
  className="cEMVUV">
  <form
    onSubmit={[Function]}>
    <div
      className="jhQCSn">
      <div
        className="egpniL">
        <input
          autoComplete="off"
          className="jeXhuP"
          name="foodName"
          onChange={[Function]}
          placeholder="Name"
          type="text"
          value="" />
      </div>
      <div
        className="egpniL">
        <select
          className="XDeHG"
          name="category"
          onChange={[Function]}
          value="">
          <option
            defaultValue={true}
            disabled={true}
            value="">
            Select Category
          </option>
          <option
            value="Beans">
            Beans
          </option>
          <option
            value="Breads">
            Breads
          </option>
          <option
            value="Cereals">
            Cereals
          </option>
          <option
            value="Dairy">
            Dairy
          </option>
          <option
            value="Fruits">
            Fruits
          </option>
          <option
            value="Snacks & Sweets">
            Snacks & Sweets
          </option>
          <option
            value="Staples">
            Staples
          </option>
          <option
            value="Vegetables">
            Vegetables
          </option>
        </select>
      </div>
      <div
        className="egpniL">
        <input
          autoComplete="off"
          className="jeXhuP"
          name="giValue"
          onChange={[Function]}
          placeholder="GI Value"
          type="number"
          value="" />
      </div>
      <div
        className="egpniL">
        <div
          className="gcxdPw">
          <button
            className="OgMJe"
            onClick={undefined}>
            Add
          </button>
        </div>
      </div>
      <div
        className="egpniL">
        <div
          className="dEIiuk">
          
        </div>
      </div>
    </div>
  </form>
</div>
`;

exports[`test component renders correctly in add mode with initial values provided 1`] = `
<div
  className="cEMVUV">
  <form
    onSubmit={[Function]}>
    <div
      className="jhQCSn">
      <div
        className="egpniL">
        <input
          autoComplete="off"
          className="jeXhuP"
          name="foodName"
          onChange={[Function]}
          placeholder="Name"
          type="text"
          value="Kidney Beans" />
      </div>
      <div
        className="egpniL">
        <select
          className="XDeHG"
          name="category"
          onChange={[Function]}
          value="">
          <option
            defaultValue={true}
            disabled={true}
            value="">
            Select Category
          </option>
          <option
            value="Beans">
            Beans
          </option>
          <option
            value="Breads">
            Breads
          </option>
          <option
            value="Cereals">
            Cereals
          </option>
          <option
            value="Dairy">
            Dairy
          </option>
          <option
            value="Fruits">
            Fruits
          </option>
          <option
            value="Snacks & Sweets">
            Snacks & Sweets
          </option>
          <option
            value="Staples">
            Staples
          </option>
          <option
            value="Vegetables">
            Vegetables
          </option>
        </select>
      </div>
      <div
        className="egpniL">
        <input
          autoComplete="off"
          className="jeXhuP"
          name="giValue"
          onChange={[Function]}
          placeholder="GI Value"
          type="number"
          value={33} />
      </div>
      <div
        className="egpniL">
        <div
          className="gcxdPw">
          <button
            className="OgMJe"
            onClick={undefined}>
            Add
          </button>
        </div>
      </div>
      <div
        className="egpniL">
        <div
          className="dEIiuk">
          
        </div>
      </div>
    </div>
  </form>
</div>
`;

exports[`test component renders correctly in edit mode 1`] = `
<div
  className="cEMVUV">
  <h3>
    Edit: 
    Kidney Beans
  </h3>
  <form
    onSubmit={[Function]}>
    <div
      className="jhQCSn">
      <div
        className="egpniL">
        <input
          autoComplete="off"
          className="jeXhuP"
          name="foodName"
          onChange={[Function]}
          placeholder="Name"
          type="text"
          value="Kidney Beans" />
      </div>
      <div
        className="egpniL">
        <select
          className="XDeHG"
          name="category"
          onChange={[Function]}
          value="Beans">
          <option
            defaultValue={true}
            disabled={true}
            value="">
            Select Category
          </option>
          <option
            value="Beans">
            Beans
          </option>
          <option
            value="Breads">
            Breads
          </option>
          <option
            value="Cereals">
            Cereals
          </option>
          <option
            value="Dairy">
            Dairy
          </option>
          <option
            value="Fruits">
            Fruits
          </option>
          <option
            value="Snacks & Sweets">
            Snacks & Sweets
          </option>
          <option
            value="Staples">
            Staples
          </option>
          <option
            value="Vegetables">
            Vegetables
          </option>
        </select>
      </div>
      <div
        className="egpniL">
        <input
          autoComplete="off"
          className="jeXhuP"
          name="giValue"
          onChange={[Function]}
          placeholder="GI Value"
          type="number"
          value={33} />
      </div>
      <div
        className="egpniL">
        <div
          className="gcxdPw">
          <button
            className="OgMJe"
            onClick={undefined}>
            Save
          </button>
        </div>
      </div>
      <div
        className="egpniL">
        <div
          className="dEIiuk">
          
        </div>
      </div>
    </div>
  </form>
  <div
    className="gcxdPw">
    <button
      className="feUtjL"
      onClick={[Function]}>
      Delete
    </button>
  </div>
</div>
`;
